--- a/R/modulo1_tema4_R_Ejercicios_2.Rmd
+++ b/R/modulo1_tema4_R_Ejercicios_2.Rmd
@@ -20,9 +20,17 @@ options(knitr.kable.NA = '')
 
 # EJERCICIO 2
 
+Cargamos datos de nuevo.
+
+```{r}
+library(datos)
+suppressPackageStartupMessages(library(tidyverse))
+```
+
+
 ## EJERCICIO 2.1.
 
-Escribe un bucle for que calcule le media todas las columnas numéricas de `millas`. 
+Escribe un bucle for que calcule la media todas las columnas numéricas de `millas`. 
 
 ```{r}
 # Solución:
@@ -95,7 +103,7 @@ Haz un `summary()` para verificar que el resultado es el mismo que en 2.6.
 
 ## EJERCICIO 2.8.
 
-Analiza si `millas` tiene registros duplicado y en caso afirmativo crea un nuevo data frame que contenga una única copia de cada fila.
+Analiza si `millas` tiene registros duplicados y en caso afirmativo crea un nuevo data frame que contenga una única copia de cada fila.
 
 ```{r}
 # Solución:
