--- a/datos_digitales/modulo3_tema1_dd_03_ganalytics.ipynb
+++ b/datos_digitales/modulo3_tema1_dd_03_ganalytics.ipynb
@@ -251,8 +251,7 @@
     "\n",
     "En el caso de Blogger, una vez hayas creado el Blog dentro de Blogger, selecciona el blog a seguir (Menú superior izquierda). Entra dentro de \"Configuración\".\n",
     "\n",
-    "En \"Opciones básicas\", verás el apartado: \"Identificador de propiedad de Google Analytics\". Clica en el texto e introduce el Identificador de Seguimiento. Este código tiene formato \"G-XXXXXXX\" y está dentro del script que se explica en el apartado anterior.\n",
-    "\n"
+    "En \"Opciones básicas\", verás el apartado: \"Identificador de propiedad de Google Analytics\". Clica en el texto e introduce el Identificador de Seguimiento. Este código tiene formato \"UA-XXXXXXX-X\" y está dentro de la plataforma de Google Analytics, pestaña \"Administrar\" (abajo izquierda) > segunda Columna \"Propiedad\" > \"Configuración de la propiedad\". El código UA-XXXXXX-X qeuda bajo el título de \"ID de seguimiento\"..\n"
    ]
   },
   {
