--- a/datos_digitales/modulo3_tema1_dd_05_webscraping.ipynb
+++ b/datos_digitales/modulo3_tema1_dd_05_webscraping.ipynb
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -753,7 +753,7 @@
     }
    ],
    "source": [
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.display import display, HTML\n",
     "display(HTML('''\n",
     "<!DOCTYPE html>\n",
     "<html>\n",
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "id": "FRNj8lKW4rTB"
    },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1124,7 +1124,7 @@
        "5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "id": "UNZo5ob34rTQ"
    },
@@ -2500,7 +2500,7 @@
        "5"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2577,7 +2577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "id": "ogIENzem4rTT"
    },
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {
     "id": "92LSgsGG4rTZ"
    },
@@ -3676,7 +3676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {
     "id": "FFJH5YJH4rTa"
    },
@@ -3709,7 +3709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {
     "id": "_m9wY5Hs4rTb"
    },
@@ -3757,7 +3757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {
     "id": "ytbkgDF84rTc"
    },
@@ -3766,7 +3766,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<html itemscope=\"\" itemtype=\"http://schema.org/WebPage\" lang=\"ca\"><head><meta charset=\"UTF-8\"><meta content=\"origin\" name=\"referrer\"><meta content=\"/images/branding/googleg/1x/googleg_standard_color_128dp.png\" itemprop=\"image\"><title>Google</title><script src=\"https://apis.google.com/_/scs/abc-static/_/js/k=gapi.gapi.en.uwHuQY_gg44.O/m=gapi_iframes,googleapis_client/rt=j/sv=1/d=1/ed=1/rs=AHpOoo_V1jKXTs4TkQZGty4n4aTwpK1Z_Q/cb=gapi.loaded_0\" nonce=\"\" async=\"\"></script><script nonce=\"\">(function(){\n"
+      "<html itemscope=\"\" itemtype=\"http://schema.org/WebPage\" lang=\"ca\"><head><meta charset=\"UTF-8\"><meta content=\"origin\" name=\"referrer\"><meta content=\"/images/branding/googleg/1x/googleg_standard_color_128dp.png\" itemprop=\"image\"><title>Google</title><script src=\"https://apis.google.com/_/scs/abc-static/_/js/k=gapi.gapi.en.SCWmpDDGjPk.O/m=gapi_iframes,googleapis_client/rt=j/sv=1/d=1/ed=1/am=AAAC/rs=AHpOoo_Pl64J0IIHlj2zBtEJ3ZwdaJC3HA/cb=gapi.loaded_0\" nonce=\"\" async=\"\"></script><script nonce=\"\">(fun\n"
      ]
     }
    ],
@@ -3852,7 +3852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {
     "id": "-0GiVTnY4rTe"
    },
@@ -3866,7 +3866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "metadata": {
     "id": "dXCgbWuoOXwI"
    },
@@ -3877,7 +3877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {
     "id": "bc2GixPFOXwJ"
    },
@@ -3969,7 +3969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "metadata": {
     "id": "CRaXOwTj4rTh"
    },
@@ -3993,7 +3993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {
     "id": "tlmxX6lw4rTj"
    },
@@ -4257,9 +4257,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "mbdds_rpy20",
+   "display_name": "mbdds_rpy24",
    "language": "python",
-   "name": "mbdds_rpy20"
+   "name": "mbdds_rpy24"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4271,7 +4271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
