--- a/datos_digitales/modulo3_tema1_dd_05_webscraping.ipynb
+++ b/datos_digitales/modulo3_tema1_dd_05_webscraping.ipynb
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {
     "id": "FRNj8lKW4rTB"
    },
@@ -1229,6 +1229,16 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = links[0]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1247,7 +1257,7 @@
        " 'https://ar.wikipedia.org/wiki/%D8%AD%D8%B1%D8%A8_%D8%A7%D9%84%D9%86%D8%AC%D9%88%D9%85']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1289,7 +1299,7 @@
        "1"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1330,7 +1340,7 @@
        "15"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {
     "id": "fa_yOXl7GA4G"
    },
@@ -1367,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1550,7 +1560,7 @@
        "14            Centro de Convenciones de Anaheim      Anaheim, California  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1703,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {
     "id": "UNZo5ob34rTQ"
    },
@@ -1714,7 +1724,7 @@
        "5"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "metadata": {
     "id": "Y9-FPsKk4rTR"
    },
@@ -1792,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {
     "id": "ogIENzem4rTT"
    },
@@ -1821,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {
     "id": "8GANSFzB4rTV"
    },
@@ -1832,7 +1842,7 @@
        "'Star Wars - Wikipedia, la enciclopedia libre'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 32,
    "metadata": {
     "id": "oIZUPZJX4rTW"
    },
@@ -1898,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 33,
    "metadata": {
     "id": "rrzQO7FS4rTW"
    },
@@ -1909,7 +1919,7 @@
        "9"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "metadata": {
     "id": "92LSgsGG4rTZ"
    },
@@ -1969,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2143,7 +2153,7 @@
        "13            Centro de Convenciones de Anaheim      Anaheim, California  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2171,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {
     "id": "FFJH5YJH4rTa"
    },
@@ -2204,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 37,
    "metadata": {
     "id": "_m9wY5Hs4rTb"
    },
@@ -2252,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 38,
    "metadata": {
     "id": "ytbkgDF84rTc"
    },
@@ -2323,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 39,
    "metadata": {
     "id": "BoNE7qoV4rTd"
    },
@@ -2347,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 40,
    "metadata": {
     "id": "-0GiVTnY4rTe"
    },
@@ -2361,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 41,
    "metadata": {
     "id": "dXCgbWuoOXwI"
    },
@@ -2372,48 +2382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 42,
    "metadata": {
     "id": "bc2GixPFOXwJ"
    },
    "outputs": [],
    "source": [
     "driver.find_element(By.NAME, \"q\").send_keys(Keys.ENTER)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "id": "JIK5MklwOXwJ"
-   },
-   "outputs": [],
-   "source": [
-    "driver.find_element(By.LINK_TEXT, \"Productes\").click()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "SkK5xxLD4rTg"
-   },
-   "source": [
-    "<br>\n",
-    "\n",
-    "Se filtra por productos nuevos y que sean de valor superior a 1.000 euros.\n",
-    "\n",
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "id": "atF4t-HH577t"
-   },
-   "outputs": [],
-   "source": [
-    "driver.find_element(By.CSS_SELECTOR, \"#hdtb-sc > div > div.zp6Lyf.FpfXM > div.IUOThf > div:nth-child(2) > a\").click()                                "
    ]
   },
   {
@@ -2431,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 43,
    "metadata": {
     "id": "CRaXOwTj4rTh"
    },
@@ -2455,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 44,
    "metadata": {
     "id": "tlmxX6lw4rTj"
    },
@@ -2481,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2506,62 +2481,62 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>nombre</th>\n",
-       "      <th>precio</th>\n",
+       "      <th>precios</th>\n",
        "      <th>href</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Busto Stormtrooper Star Wars 1/1 68 cm Sidesho...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <th>24</th>\n",
+       "      <td>Star Wars La colección Vintage - Moto Speeder,...</td>\n",
+       "      <td>37,89 €</td>\n",
+       "      <td>https://www.amazon.es/Star-Wars-colecci%C3%B3n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Star Wars: Original Stormtrooper 1:3 Scale Statue</td>\n",
-       "      <td>None</td>\n",
-       "      <td>https://www.toystnt.com/ver/articulo/8469/%3Fs...</td>\n",
+       "      <th>25</th>\n",
+       "      <td>Figura de cristal de Swarovski de Darth Vader ...</td>\n",
+       "      <td>350,00 €</td>\n",
+       "      <td>https://www.swarovski.com/es-ES/p-5379499/Star...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>halcon milenario planeta agostini star wars re...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>https://www.todocoleccion.net/figuras-munecos-...</td>\n",
+       "      <th>26</th>\n",
+       "      <td>TOMY-Mini coche de nave espacial de Star Wars,...</td>\n",
+       "      <td>9,68 €</td>\n",
+       "      <td>https://es.aliexpress.com/item/100500368930975...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>figura star wars en blister - el imperio contr...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>https://www.todocoleccion.net/figuras-munecos-...</td>\n",
+       "      <th>27</th>\n",
+       "      <td>Sujeta Libros Stormtroopers Star Wars 18,5 cms</td>\n",
+       "      <td>65,00 €</td>\n",
+       "      <td>https://frikiverso.es/es/top-ventas/608-sujeta...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>el retorno del jedi beta original edicion arca...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>https://www.todocoleccion.net/cine-peliculas-b...</td>\n",
+       "      <th>28</th>\n",
+       "      <td>Nuevo Marcapáginas de Nave Espacial de Star Wa...</td>\n",
+       "      <td>10,49 €</td>\n",
+       "      <td>https://www.temu.com/es/kuiper/un9/shopping-gm...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               nombre precio  \\\n",
-       "7   Busto Stormtrooper Star Wars 1/1 68 cm Sidesho...   None   \n",
-       "8   Star Wars: Original Stormtrooper 1:3 Scale Statue   None   \n",
-       "9   halcon milenario planeta agostini star wars re...   None   \n",
-       "10  figura star wars en blister - el imperio contr...   None   \n",
-       "11  el retorno del jedi beta original edicion arca...   None   \n",
+       "                                               nombre   precios  \\\n",
+       "24  Star Wars La colección Vintage - Moto Speeder,...   37,89 €   \n",
+       "25  Figura de cristal de Swarovski de Darth Vader ...  350,00 €   \n",
+       "26  TOMY-Mini coche de nave espacial de Star Wars,...    9,68 €   \n",
+       "27     Sujeta Libros Stormtroopers Star Wars 18,5 cms   65,00 €   \n",
+       "28  Nuevo Marcapáginas de Nave Espacial de Star Wa...   10,49 €   \n",
        "\n",
        "                                                 href  \n",
-       "7                                                None  \n",
-       "8   https://www.toystnt.com/ver/articulo/8469/%3Fs...  \n",
-       "9   https://www.todocoleccion.net/figuras-munecos-...  \n",
-       "10  https://www.todocoleccion.net/figuras-munecos-...  \n",
-       "11  https://www.todocoleccion.net/cine-peliculas-b...  "
+       "24  https://www.amazon.es/Star-Wars-colecci%C3%B3n...  \n",
+       "25  https://www.swarovski.com/es-ES/p-5379499/Star...  \n",
+       "26  https://es.aliexpress.com/item/100500368930975...  \n",
+       "27  https://frikiverso.es/es/top-ventas/608-sujeta...  \n",
+       "28  https://www.temu.com/es/kuiper/un9/shopping-gm...  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2570,23 +2545,23 @@
     "import re\n",
     "\n",
     "# get all products list\n",
-    "product_tree = tree.cssselect(\"div.sh-dgr__content\")\n",
+    "product_tree = tree.xpath('//a[starts-with(@id,\"vplahcl_\")]')\n",
     "\n",
     "# get attributes by product\n",
     "prod_list = []\n",
     "for prod in product_tree:\n",
-    "    product_name_tree = prod.cssselect(\"span > a\")\n",
-    "    product_price_tree = prod.cssselect(\"div.XrAfOe > span > span > span:nth-child(3) > span\")\n",
-    "    product_href_tree = prod.cssselect(\"div.zLPF4b > span > div:nth-child(2)\")\n",
+    "    product_name_tree = prod.cssselect(\"span.pymv4e\")\n",
+    "    product_price_tree = prod.cssselect(\"div.qptdjc\")\n",
+    "    product_href_tree = prod.attrib['href']\n",
     "    \n",
     "    product_name = product_name_tree[0].text_content() if len(product_name_tree)>0 else None\n",
-    "    product_price = product_name_tree[0].text_content() if len(product_price_tree)>0 else None\n",
-    "    product_href_list = re.findall(r'(https?://\\S+)',product_name_tree[0].attrib['href']) if len(product_href_tree)>0 else None\n",
+    "    product_price = product_price_tree[0].text_content() if len(product_price_tree)>0 else None\n",
+    "    product_href_list = re.findall(r'(https?://\\S+)',product_href_tree) if len(product_href_tree)>0 else None\n",
     "    product_href = product_href_list[0] if len(product_href_list)>0 else None\n",
     " \n",
     "    \n",
     "    auxTxt = {'nombre':product_name,\n",
-    "            'precio': product_price,\n",
+    "            'precios': product_price,\n",
     "            'href': product_href}\n",
     "    prod_list.append(auxTxt)\n",
     "\n",
@@ -2597,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {
     "id": "zo-zNSEJ577v",
     "scrolled": true
@@ -2606,10 +2581,10 @@
     {
      "data": {
       "text/plain": [
-       "(12, 3)"
+       "(29, 3)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2620,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {
     "id": "tAWGcQE3OXwO"
    },
