--- a/datos_digitales/modulo3_tema1_dd_02_oficiales.ipynb
+++ b/datos_digitales/modulo3_tema1_dd_02_oficiales.ipynb
@@ -565,7 +565,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install eurostat"
+        "# !pip install eurostat"
       ]
     },
     {
@@ -631,19 +631,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "107twVen9o7y"
+      },
+      "outputs": [],
       "source": [
         "df = eurostat.get_data_df(\"hlth_ds010\", flags=False)\n",
         "\n",
         "df.head()"
-      ],
-      "metadata": {
-        "id": "107twVen9o7y"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eJnXTQGd8Pjd"
+      },
+      "outputs": [],
       "source": [
         "paises = ['BE', 'DE','ES', 'FR','IT','UK', 'PT']\n",
         "\n",
@@ -654,12 +659,7 @@
         "cinema.index.names=[\"%Pob\"]\n",
         "\n",
         "cinema.head()"
-      ],
-      "metadata": {
-        "id": "eJnXTQGd8Pjd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -724,7 +724,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install world_bank_data"
+        "# !pip install world_bank_data"
       ]
     },
     {
@@ -851,7 +851,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.9"
+      "version": "3.9.12"
     }
   },
   "nbformat": 4,
